2026-02-19T01:00:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22164160873 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-19
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 158 1957 / 162 1961
* notice: next accum: outdated-unq outdated-all / unq all: 158 1957 / 158 1957
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-18T01:00:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22122155582 # 881
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 158 1957 / 158 1957
* notice: next accum: outdated-unq outdated-all / unq all: 158 1957 / 162 1961
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28 2026-01-29 2026-01-30 2026-01-31 2026-02-01 2026-02-02] / [2026-02-15]

2026-02-17T00:58:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22082228357 # 880
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 158 1957 / 161 1960
* notice: next accum: outdated-unq outdated-all / unq all: 158 1957 / 158 1957
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-16T00:59:57Z: